--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href='css.reset.css'>
+    <link rel="stylesheet" href='css/reset.css'>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <title></title>
     </header>
     <main>
-        <h3>Clikc on your favorite mall item!</h3>
+        <h3>Click on your favorite mall item!</h3>
         <section>
             <img>
             <img>
@@ -28,7 +29,7 @@
 
     </footer>
 
-    <scrip src="js/app.js"></scrip>
+    <script src="js/app.js"></script>
     
 </body>
 </html>
