--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <img>
             <img>
         </section>
+
+        <canvas id="myChart" width="400" height="400"></canvas>
         <div>View Results</div>
         <ul></ul>
 
@@ -28,7 +30,7 @@
     <footer>
 
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.0/dist/chart.min.js"></script>
     <script src="js/app.js"></script>
     
 </body>
